# rust_handson_projetcs

./: .gitignore  LICENSE
Leetcodes/binary_search_704/: .gitignore  Cargo.toml
Leetcodes/binary_search_704/src/: main.rs
Leetcodes/search_insert_position_35/: Cargo.toml
Leetcodes/search_insert_position_35/src/: main.rs
Test/src/: main.rs
greedy-coin-micoservice/: Cargo.toml
greedy-coin-micoservice/src/: lib.rs
ipsniffer/: Cargo.toml
ipsniffer/src/: main.rs
minigrep/src/: lib.rs  main.rs
rust-next-blog/: .env  Cargo.toml
rust-next-blog/frontend/: package-lock.json  package.json  tailwind.config.js
rust-next-blog/frontend/src/app/: globals.css  page.tsx
rust-next-blog/src/: main.rs
todo_axum/: Cargo.toml
todo_axum/src/: main.rs
